--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "promotion-video-producer",
+  "name": "promotionvideoproducer",
   "version": "0.0.1",
-  "description": "Promotion Video Producer(a.k.a PVMaker) Is a software that generates music MV for Vocaloid like art work",
-  "main": "dist/main.js",
+  "description": "Promotion Video Producer(a.k.a PVMaker & PV制作器) Is a software that generates music MV for Vocaloid like art work",
+  "main": "main.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "electron": "^5.0.2",
+    "grunt": "^1.0.4",
+    "grunt-contrib-connect": "^2.0.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "npm run build && electron ./dist/main.js",
-    "dist": "npm run build && electron-builder"
+    "test": "electron ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GloomyGhost-MosquitoSeal/PromotionVideoProducer.git"
   },
   "keywords": [
-    "Electron"
+    "Promotion",
+    "Video",
+    "Producer"
   ],
-  "author": "GitHub",
+  "author": "GloomyGhsot",
   "license": "GPL-3.0",
-  "devDependencies": {
-    "electron": "^5.0.2",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3",
-    "electron-builder": "^20.43.0"
-  },
-  "dependencies": {
-    "azusa": "^1.0.2"
-  },
   "bugs": {
     "url": "https://github.com/GloomyGhost-MosquitoSeal/PromotionVideoProducer/issues"
   },
-  "homepage": "https://github.com/GloomyGhost-MosquitoSeal/PromotionVideoProducer"
+  "homepage": "https://github.com/GloomyGhost-MosquitoSeal/PromotionVideoProducer#readme"
 }
